# Database_pract

./: .gitignore
1_pract/: .env.example  alembic.ini  database.py  main.py  models.py  pyproject.toml
1_pract/alembic/: env.py
1_pract/alembic/versions/: 1ebd2e9dad0e_initial.py
2_pract/: database.py  main.py  models.py  pyproject.toml  spimex_parser.py
2_pract/alembic/versions/: 221debeb64e7_create_spimex_trading_results_table.py
