[tool.poetry]
name = "1_pract"
version = "0.1.0"
description = ""
authors = ["Corner324 <mosenn@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.40"
python-dotenv = "^1.1.0"
psycopg2 = "^2.9.10"
alembic = "^1.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
